--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.objectContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.objects {
+  display: flex;
+  row-gap: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.clicked{
+  width: 10rem;
+  height: 10rem;
+  cursor: pointer;
+  border: red solid 5px;
+}
+
+.notClicked {
+  width: 10rem;
+  height: 10rem;
+  cursor: pointer;
+}
+
+
+
+.randomObject {
+display: flex;
+justify-content: flex-end;
+margin-left: auto;
+width: 10%;
+cursor: none;
+}
+
+.container {
+  display: flex;
+  gap: 100px;
+}
+.clickedObject {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 10rem;
+  width: 50%;
+
+}
+
+.randomObjectName {
+  width: 50%;
+  font-size: 10rem;
+  visibility: hidden;
+}
+
+.randomObjectNamesVisual {
+  width: 50%;
+  font-size: 10rem;
+  visibility: visible;
 }
