--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.containerRPS {
+background-color: aqua;
+min-height: 100vh;
+}
 .objectContainer {
   display: flex;
   justify-content: space-around;
@@ -21,8 +25,6 @@
   cursor: pointer;
 }
 
-
-
 .randomObject {
 display: flex;
 justify-content: flex-end;
@@ -33,24 +35,17 @@ cursor: none;
 
 .container {
   display: flex;
+  justify-content: center;
+  width: 60%;
+  margin: auto;
   gap: 100px;
-}
-.clickedObject {
-  display: flex;
-  justify-content: flex-end;
-  font-size: 10rem;
-  width: 50%;
-
+  margin-top: 100px;
 }
 
-.randomObjectName {
-  width: 50%;
-  font-size: 10rem;
-  visibility: hidden;
+.randomObjectName {  
+  visibility: visible;
 }
 
 .randomObjectNamesVisual {
-  width: 50%;
-  font-size: 10rem;
   visibility: visible;
 }
